Changes related to code in posts

--- a/posts/another-test/index.mdx
+++ b/posts/another-test/index.mdx
@@ -9,4 +9,16 @@ Sint tempor sit sint nisi incididunt aute non occaecat eu fugiat in. Dolore sint
 
 ## H2 title
 
-Let's see what I get here.
+Let's see what I get here checking `innercode`:
+
+```java
+package com.vimalselvam;
+
+class Main {
+  private int data;
+
+  public static void main(String[] args) {
+    System.out.println("Adipisicing amet et occaecat incididunt. Aliqua ea sunt excepteur adipisicing commodo eu cillum proident. Sit cillum elit ipsum ullamco esse est cupidatat eiusmod aliquip labore. Cupidatat officia non nisi ipsum do sunt. Aliquip tempor duis veniam adipisicing mollit elit adipisicing eiusmod enim non. Cupidatat aliquip adipisicing reprehenderit aute proident aliqua nostrud. Non sunt in id sint mollit commodo exercitation id commodo veniam aute culpa quis.")
+  }
+}
+```
