--- a/posts/test/index.mdx
+++ b/posts/test/index.mdx
@@ -10,3 +10,7 @@ Sint tempor sit sint nisi incididunt aute non occaecat eu fugiat in. Dolore sint
 ## H2 title
 
 Let's see what I get here.
+
+```javascript
+const test = 'Hello World!'
+```
