Added the title as a description if not present for SEO

--- a/posts/automating-tasks-using-apple-script/index.mdx
+++ b/posts/automating-tasks-using-apple-script/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Automating tasks using Apple Script'
+title: Automating tasks using Apple Script
+description: Automating tasks using Apple Script
 date: 2016-01-09
 ---
 
