--- a/posts/cucumber-custom-html-report-using-extent-report/index.mdx
+++ b/posts/cucumber-custom-html-report-using-extent-report/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Cucumber custom html report using Extent Report'
+title: Cucumber custom html report using Extent Report
 date: 2016-03-28
 ---
 
